--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 </head>
 <body>
   <h1>Exercitium I</h1>
-  <iframe style="max-width:100%" src="https://wordwall.net/it/embed/ee9c7236f2ce43998bb17567eab31fb6?themeId=62&templateId=2&fontStackId=0" width="500" height="380" frameborder="0" allowfullscreen></iframe>
+  <iframe style="max-width:100%" src="https://wordwall.net/it/embed/ee9c7236f2ce43998bb17567eab31fb6?themeId=62&templateId=2&fontStackId=0" width="100%" height="380" frameborder="0" allowfullscreen></iframe>
 </body>
 </html>
