--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name='viewport' content='width=device-width, initial-scale=1.0'>
 <title>Exercitium 1</title>
 <style>
-  h1 {text-align: center; font-family: Roboto;}
+  h1 {text-align: center; font-family: "Roboto";}
 </style>
 </head>
 <body>
