--- a/index.html
+++ b/index.html
@@ -1,15 +1,36 @@
 <!DOCTYPE html>
-<html lang='la'>
+<html lang="it">
 <head>
-<meta charset='UTF-8'>
-<meta name='viewport' content='width=device-width, initial-scale=1.0'>
-<title>Exercitium 1</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
-  h1 {text-align: center;}
+html, body {
+margin: 0;
+padding: 0;
+height: 100%;
+overflow: hidden;
+}
+.wrapper {
+display: flex;
+justify-content: center;
+align-items: center;
+height: 100vh;
+width: 100vw;
+box-sizing: border-box;
+}
+.content {
+width: 100%;
+height: 100%;
+}
 </style>
 </head>
 <body>
-  <h1>Exercitium I</h1>
-  <iframe style="max-width:100%" src="https://wordwall.net/it/embed/ee9c7236f2ce43998bb17567eab31fb6?themeId=62&templateId=2&fontStackId=0" width="500" height="380" frameborder="0" allowfullscreen></iframe>
+<div class="wrapper">
+<div class="content">
+<iframe src="<iframe style="max-width:100%" src="https://wordwall.net/it/embed/ee9c7236f2ce43998bb17567eab31fb6?themeId=62&templateId=2&fontStackId=0" width="500" height="380" frameborder="0" allowfullscreen></iframe>"
+style="width: 100%; height: 100%; border: none;"
+allowfullscreen></iframe>
+</div>
+</div>
 </body>
 </html>
