--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@ height: 100%;
 <body>
 <div class="wrapper">
 <div class="content">
-<iframe src="https://wordwall.net/it/embed/ee9c7236f2ce43998bb17567eab31fb6?themeId=62&templateId=2&fontStackId=0" width="500" height="380" frameborder="0" allowfullscreen></iframe>"
-style="width: 100%; height: 100%; border: none;"
+<iframe src="https://wordwall.net/it/embed/ee9c7236f2ce43998bb17567eab31fb6?themeId=62&templateId=2&fontStackId=0"style="width: 100%; height: 100%; border: none;"
 allowfullscreen></iframe>
 </div>
 </div>
